--- a/.travis.yml
+++ b/.travis.yml
@@ -84,7 +84,7 @@ before_install:
 
 install:
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      sudo apt-get install -qq qt59base; source /opt/qt59/bin/qt59-env.sh;
+      sudo apt-get install -qq qt59base qt59declarative qt59quickcontrols2; source /opt/qt59/bin/qt59-env.sh;
     else
       brew install qt5;
       brew link --force qt5;
