--- a/.travis.yml
+++ b/.travis.yml
@@ -22,15 +22,15 @@ addons_shortcuts:
   addons_clang39: &clang39
     apt:
       sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-3.9' ]
-      packages: [ 'clang-3.9','libc++-dev','libc++abi-dev' ]
+      packages: [ 'clang-3.9' ]
   addons_clang40: &clang40
     apt:
       sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-4.0']
-      packages: [ 'clang-4.0','libc++-dev','libc++abi-dev' ]
+      packages: [ 'clang-4.0' ]
   addons_clang50: &clang50
     apt:
       sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
-      packages: [ 'clang-5.0', 'clang-tidy-5.0','libc++-dev','libc++abi-dev' ]
+      packages: [ 'clang-5.0', 'clang-tidy-5.0' ]
   addons_gcc5: &gcc5
     apt:
       sources: [ 'ubuntu-toolchain-r-test' ]
