--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ before_install:
     else
       brew update;
     fi
-  - if [ -n "$CLANG_VERSION" ]; then sudo PATH="${PATH}" CXX="$CXX" CC="$CC" ./ci_support/install_libcxx.sh; fi
+#  - if [ -n "$CLANG_VERSION" ]; then sudo PATH="${PATH}" CXX="$CXX" CC="$CC" ./ci_support/install_libcxx.sh; fi
   
 install:
   - |
