--- a/Projects/CoX/Utilities/CMakeLists.txt
+++ b/Projects/CoX/Utilities/CMakeLists.txt
@@ -3,5 +3,6 @@ IF(BUILD_COX_MAP_VIEWER)
 ENDIF(BUILD_COX_MAP_VIEWER)
 ADD_SUBDIRECTORY(piggtool)
 ADD_SUBDIRECTORY(BinConverter)
+ADD_SUBDIRECTORY(TextureConverter)
 ADD_SUBDIRECTORY(dbtool)
 ADD_SUBDIRECTORY(AuthExerciser)
