SlashCommand Implementation and updated SEGS URL TODO: `/script` and `whoall` no longer work because they rely on variables (specifically arrays) now out of scope.

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(target_CPP
     MapServerData.cpp
     MapTemplate.cpp
     NetCommandManager.cpp
+    SlashCommand.cpp
     WorldSimulation.cpp
     ${SCRIPTING_CPP}
 )
@@ -59,6 +60,7 @@ SET(target_INCLUDE
     MapTemplate.h
     NetCommandManager.h
     ScriptingEngine.h
+    SlashCommand.h
     WorldSimulation.h
 )
 
