--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -6,8 +6,12 @@ ADD_SUBDIRECTORY(Utilities)
 ADD_SUBDIRECTORY(Servers)
 ADD_SUBDIRECTORY(Clients)
 
-# Add README, settings.cfg, and Starter Databases
+# Add README, scripts, settings.cfg, and Starter Databases
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/docs/README.md ${EXECUTABLE_OUTPUT_PATH}/README.md COPYONLY)
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/motd.smlx DESTINATION ${EXECUTABLE_OUTPUT_PATH}/scripts)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/test.smlx DESTINATION ${EXECUTABLE_OUTPUT_PATH}/scripts)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/scripts/tutorial.smlx DESTINATION ${EXECUTABLE_OUTPUT_PATH}/scripts)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings.cfg ${EXECUTABLE_OUTPUT_PATH}/default_dbs/settings.cfg COPYONLY)
 if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/settings.cfg)
