Improved ChatMessage and InfoMessageCmd classes, plus more... - More SlashCommands, including `/setSuperGroupID` and `/setTeamID` - Fixes to `/whoall` and `/script` which relied on MapInstance - TODO: source/target for chatMessage delivery seems wonky and sometimes results in duplicate messages posting to the channel. For example in Group or SuperGroup chat. - TODO: Chat bubbles often appear above more than one Entity. - TODO: Identified crash when creating new character. Must be a regression from char-data PR.

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(target_CPP
     Events/PlaqueVisited.cpp
     Events/NewEntity.cpp
     Events/SceneEvent.cpp
+    Events/InfoMessageCmd.cpp
     MapClient.cpp
     MapEventFactory.cpp
     MapInstance.cpp
