Final Settings Class Initialize as `QSettings s(getSettings());`

--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -37,15 +37,15 @@ CharacterDatabase\db_user   = segsadmin
 CharacterDatabase\db_pass   = segs123
 
 [AuthServer]
-listen_addr       = 127.0.0.1:2106
+location_addr         = 127.0.0.1:2106
 
 [GameServer] 
-server_name       = first server
-listen_addr       = 127.0.0.1:7002
-location_addr     = 127.0.0.1:7002
-max_players       = 200
-max_account_slots = 8
+server_name         = first server
+listen_addr         = 127.0.0.1:7002
+location_addr       = 127.0.0.1:7002
+max_players         = 200
+max_character_slots = 8
 
 [MapServer]  
-listen_addr       = 127.0.0.1:7003
-location_addr     = 127.0.0.1:7003
+listen_addr         = 127.0.0.1:7003
+location_addr       = 127.0.0.1:7003
