--- a/.travis.yml
+++ b/.travis.yml
@@ -95,7 +95,7 @@ install:
       sudo apt-get install -qq qt59base qt59declarative qt59quickcontrols2; source /opt/qt59/bin/qt59-env.sh;
     else
       brew install qt5;
-      brew link --force qt5;
+      brew link --force qt5 && sudo ln -s /usr/local/Cellar/qt/5.10.1/mkspecs /usr/local/mkspecs && sudo ln -s /usr/local/Cellar/qt/5.10.1/plugins /usr/local/plugins;
     fi
 
 script:
