Fix for some lingering settings class issues.

--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -14,7 +14,7 @@
 #    Default ports are listed below:
 #      AccountDatabase db_port:		5432
 #      CharacterDatabase db_port:	5432
-#      AuthServer listen_addr:		2106
+#      AuthServer location_addr:	2106
 #      GameServer listen_addr:		7002
 #      GameServer location_addr:	7002
 #      MapServer listen_addr:		7003
