--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -5,6 +5,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Costume.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Powers.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Entity.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/Team.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/CommonNetStructures.h
@@ -14,6 +15,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Costume.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Entity.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Contact.h
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.h
+${CMAKE_CURRENT_SOURCE_DIR}/Team.h
 )
 
 
