[WIP] Further work on Keybind serialization. Pushing for access from other computers.

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -12,6 +12,7 @@ SET(target_CPP
     Events/ChatMessage.cpp
     Events/EntitiesResponse.cpp
     Events/InputState.cpp
+    Events/KeybindSettings.cpp
     Events/LocationVisited.cpp
     Events/PlaqueVisited.cpp
     Events/NewEntity.cpp
@@ -41,6 +42,7 @@ SET(target_INCLUDE
     Events/ChatMessage.h
     Events/EntitiesResponse.h
     Events/InputState.h
+    Events/KeybindSettings.h
     Events/LocationVisited.h
     Events/PlaqueVisited.h
     Events/NewEntity.h
