Implement Logging using Categories. Fix errors in Teams and Sidekicks

--- a/Projects/CoX/Common/CMakeLists.txt
+++ b/Projects/CoX/Common/CMakeLists.txt
@@ -1,4 +1,4 @@
-INCLUDE_DIRECTORIES(.)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} .)
 
 ADD_SUBDIRECTORY(CRUDP_Protocol)
 ADD_SUBDIRECTORY(NetStructures)
