--- a/Components/CMakeLists.txt
+++ b/Components/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(target_CPP
     SEGSTimer.cpp
     FixedPointValue.cpp
     Settings.cpp
+    Logging.cpp
 )
 SET(target_INCLUDE
     BitStream.h
@@ -21,6 +22,7 @@ SET(target_INCLUDE
     SEGSTimer.h
     FixedPointValue.h
     Settings.h
+    Logging.h
 )
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
