Fixed Logging settings.cfg issue. Add FriendList and Friend structs. - Serialized friendslist data to database - Moved Sidekick methods to Teams files - Fixed issue with Logging settings not being properly pulled from settings.cfg
TODO:
- Friendslist still doesn't work for some reason
- ChatDivider doesn't update from database
- Need to call SidekickConfirm when adding sidekick

--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -52,6 +52,7 @@ location_addr       = 127.0.0.1:7003
 
 [Logging]
 log_generic         = *.debug=true\nqt.*.debug=false
+log_logging         = false
 log_keybinds        = false
 log_settings        = false
 log_gui             = false
@@ -66,3 +67,6 @@ log_target          = false
 log_spawn           = false
 log_mapevents       = true
 log_slashcommand    = true
+log_description     = false
+log_friends         = false
+log_minimap         = false
