SidekickOffer and TeamOffer implemented. TeamLooking is WIP

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -54,7 +54,10 @@ SET(target_INCLUDE
     Events/SaveClientOptions.h
     Events/SceneEvent.h
     Events/Shortcuts.h
+    Events/SidekickOffer.h
     Events/StandardDialogCmd.h
+    Events/TeamLooking.h
+    Events/TeamOffer.h
     Events/InfoMessageCmd.h
     Events/WindowState.h
     MapClient.h
