Add TeamLooking (LFG) functionality. Add lfg logging.

--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -70,3 +70,4 @@ log_slashcommand    = true
 log_description     = false
 log_friends         = false
 log_minimap         = false
+log_lfg             = false
