--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(target_CPP
     ${CMAKE_CURRENT_SOURCE_DIR}/ServerHandle.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ServerManager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/InterfaceManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/HandlerLocator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/MessageBus.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/MessageBusEndpoint.cpp
 )
@@ -31,6 +32,7 @@ SET(target_INCLUDE
     ${CMAKE_CURRENT_SOURCE_DIR}/ServerManager.h
     ${CMAKE_CURRENT_SOURCE_DIR}/Database.h
     ${CMAKE_CURRENT_SOURCE_DIR}/InternalEvents.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/HandlerLocator.h
     ${CMAKE_CURRENT_SOURCE_DIR}/MessageBus.h
     ${CMAKE_CURRENT_SOURCE_DIR}/MessageBusEndpoint.h
     ${CMAKE_CURRENT_SOURCE_DIR}/opcodes/ControlCodes.h
