Add email event handlers. Does not support send due to lack of database.

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -40,6 +40,8 @@ SET(target_INCLUDE
     Events/GameCommandList.h
     Events/ChatDividerMoved.h
     Events/ChatMessage.h
+    Events/EmailHeaders.h
+    Events/EmailRead.h
     Events/EntitiesResponse.h
     Events/FloatingDamage.h
     Events/FriendsListUpdate.h
