Starting another merge-phase for the server separation work
A few unrelated fixes/changes first

* Remove disregard_seq argument from RecvPacket, simplify it at the same
time
* started to mark ACE includes as SYSTEM to prevent more thorough
warning modes spewing loads of ACE related warnings.

--- a/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
+++ b/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
@@ -28,8 +28,7 @@ ${target_INCLUDE}
 )
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${ACE_path})
-INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(SYSTEM ${ACE_path})
 
 ADD_LIBRARY(CRUDP_Protocol STATIC ${target_SOURCES})
 target_include_directories(CRUDP_Protocol INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
