Misc fixes and code cleanups

--- a/Projects/CoX/Servers/CMakeLists.txt
+++ b/Projects/CoX/Servers/CMakeLists.txt
@@ -8,8 +8,7 @@ OPTION(BUILD_SEPARATE "When set to 1 this will build each server as a separate e
 #FIND_PACKAGE(Boost REQUIRED)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-INCLUDE_DIRECTORIES(${ACE_path})
-#INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(SYSTEM ${ACE_path})
 
 ADD_SUBDIRECTORY(AdminServer)
 ADD_SUBDIRECTORY(GameServer)
