--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -31,8 +31,7 @@ ${target_INCLUDE}
 )
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR} .)
-INCLUDE_DIRECTORIES(${ACE_path})
-INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(SYSTEM ${ACE_path})
 
 ADD_LIBRARY(network_structures STATIC ${target_SOURCES})
 set_target_properties(network_structures PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
