Made ILink a base class for all external server links
The client session context can be quried from every link now.
* fix signatures of 2 functions in DataHelpers
* add spin_up_for and spin_down methods to MapInstance, those are meant
as entry points for managing state of MapInstances.
* MapInstances now know the id of the game server they are associated
with

--- a/Projects/CoX/Common/Servers/CMakeLists.txt
+++ b/Projects/CoX/Common/Servers/CMakeLists.txt
@@ -37,7 +37,7 @@ ${target_INCLUDE}
 )
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${ACE_path})
+INCLUDE_DIRECTORIES(SYSTEM ${ACE_path})
 
 ADD_LIBRARY(cox_server_common STATIC ${target_SOURCES})
 add_dependencies(cox_server_common ace_IMP)
