--- a/Projects/CoX/Servers/CMakeLists.txt
+++ b/Projects/CoX/Servers/CMakeLists.txt
@@ -10,6 +10,8 @@ OPTION(BUILD_SEPARATE "When set to 1 this will build each server as a separate e
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 INCLUDE_DIRECTORIES(SYSTEM ${ACE_path})
 
+ADD_SUBDIRECTORY(GameDatabase)
+ADD_SUBDIRECTORY(AuthDatabase)
 ADD_SUBDIRECTORY(AdminServer)
 ADD_SUBDIRECTORY(GameServer)
 ADD_SUBDIRECTORY(MapServer)
