--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -41,6 +41,7 @@ SET(target_INCLUDE
     Events/ChatDividerMoved.h
     Events/ChatMessage.h
     Events/EmailHeaders.h
+    Events/EmailMessageStatus.h
     Events/EmailRead.h
     Events/EntitiesResponse.h
     Events/FloatingDamage.h
