Fix 2 compilation problems detected on gcc 6.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ PROJECT(SEGS)
 IF(MSVC)
     add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS -DNOMINMAX -D_USE_MATH_DEFINES)
 ELSE()
-   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Wuseless-cast"  )
+   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Wuseless-cast -std=c++14"  )
 endif()
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -61,9 +61,9 @@ IF(MSVC)
     SET(QT_MSVC "2015")
     # check for 64-bit os
     # may need to be removed for older compilers as it wasn't always offered
-	if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8")
+    if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8")
         SET(QT_MSVC "2017_64")
-	endif()
+    endif()
 
     SET(QT_PATH "${QT_VERSION}/msvc${QT_MSVC}")
     SET(QT_MISSING False)
