Entering the correct map based on character's map string
Given a correct map name in the character's data, and the proper data directory for the map.
The server will now create a MapInstance for the given map, and client will enter it.

TODO: needs a proper map scene graph to correctly set location of the entities after they enter the map.

--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -49,6 +49,7 @@ max_character_slots = 8
 [MapServer]  
 listen_addr         = 127.0.0.1:7003
 location_addr       = 127.0.0.1:7003
+maps                = MapInstances
 
 [Logging]
 log_generic         = *.debug=true\nqt.*.debug=false
