It's NPCing time :)
New console commands `addNpc` and `moveTo`

*addNpc* takes a name of the npc from VillainCostumes, and variant number
*moveTo* moves the player to given x,y,z location on the map

Created an 'umbrella' PlayerData struct for common, player-only information, this replaced the database columns for each player-specific part with one player_data blob
Added a loader for npc data files + added support for it in binConverter.
Reorganized SlashCommand files to only expose `runCommand` function.
All slash command handlers now take `MapClientSession` reference as an argument

Removed some more stale code/files.

--- a/Projects/CoX/Servers/AuthServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthServer/CMakeLists.txt
@@ -38,7 +38,7 @@ IF(BUILD_SEPARATE)
         ${target_DEPENDS} gameData
         SEGS_Components
         ${SCRIPTING_LIBRARY}
-        ${CMAKE_THREAD_LIBS_INIT}
+        Threads::Threads
         ace_IMP
         ${CMAKE_DL_LIBS}
         password_hasher
