--- a/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
+++ b/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
@@ -1,16 +1,19 @@
+find_package(Threads REQUIRED)
+
 set(SOURCES main.cpp DummyClass.cpp)
 set(HEADERS DummyClass.h)
+
 add_executable(AuthExerciser ${SOURCES} ${HEADERS})
 add_dependencies(AuthExerciser ace_IMP cereal_IMP) # used for Singleton stuff.
 qt5_use_modules(AuthExerciser Core)
-
 TARGET_LINK_LIBRARIES(AuthExerciser
-        ${target_DEPENDS}
-        AuthProtocol
-        SEGS_Components
-	${CMAKE_THREAD_LIBS_INIT}
-	ace_IMP
-	${CMAKE_DL_LIBS}
+    Threads::Threads
+    ${target_DEPENDS}
+    AuthProtocol
+    SEGS_Components
+    ace_IMP
+    ${CMAKE_DL_LIBS}
+    Threads::Threads
 )
 install(TARGETS AuthExerciser
     DESTINATION deploy
