Add support for `Interact with this` packets
Server should no longer crash when clicking on spawned npcs

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -61,6 +61,7 @@ SET(target_INCLUDE
     Events/TeamLooking.h
     Events/TeamOffer.h
     Events/InfoMessageCmd.h
+    Events/InteractWithEntity.h
     Events/WindowState.h
     NpcStore.h
     MapEventFactory.h
