Initial version of GUI tool for Admin functions
Adds DBTool functionality for Creating databases and adding users,
starting and stopping of AuthServer and ability to read the settings
config file

** Review fixes / changes **

Class names changed to CamelCase
Includes re-ordered by 'distance'
Class member variables prefixed with m_
Connect calls re-ordered by signal-source object
Slight tidy up on dbcommand invocation
Indentation tidied up
Removed QString prefix from .replace functions
All function names changed to snake_case_names
Check db exists changed from an AND clause to OR to cater for 1 file
Checking for existing databases text moved into correct method
dialog.cpp class removed, replaced with QMessageBox
CMakeLists Qt5 5.10.0 to 5.9 for Travis build
Added support for Q_OS_MACOS to satisfy Travis-CI, not tested
snake_case and m_ prefix fixes

--- a/Projects/CoX/Utilities/CMakeLists.txt
+++ b/Projects/CoX/Utilities/CMakeLists.txt
@@ -6,3 +6,4 @@ ADD_SUBDIRECTORY(BinConverter)
 ADD_SUBDIRECTORY(TextureConverter)
 ADD_SUBDIRECTORY(dbtool)
 ADD_SUBDIRECTORY(AuthExerciser)
+ADD_SUBDIRECTORY(SEGSAdmin)
