--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -18,5 +18,6 @@ if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/settings.cfg)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings.cfg ${EXECUTABLE_OUTPUT_PATH}/settings.cfg COPYONLY)
 endif()
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/mysql DESTINATION ${EXECUTABLE_OUTPUT_PATH}/default_dbs)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/pgsql DESTINATION ${EXECUTABLE_OUTPUT_PATH}/default_dbs)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite DESTINATION ${EXECUTABLE_OUTPUT_PATH}/default_dbs)
