Starting to work on common scenegraph code.

--- a/Projects/CoX/Common/CMakeLists.txt
+++ b/Projects/CoX/Common/CMakeLists.txt
@@ -6,3 +6,4 @@ ADD_SUBDIRECTORY(Servers)
 ADD_SUBDIRECTORY(GameData)
 ADD_SUBDIRECTORY(AuthProtocol)
 ADD_SUBDIRECTORY(PasswordHasher)
+ADD_SUBDIRECTORY(Runtime)
