Fixed spawn location and /stuck location based upon map Fixed some output for npc debug messages
Closes #337

--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -60,6 +60,7 @@ log_gui             = false
 log_teams           = false
 log_db              = false
 log_input           = false
+log_position        = false
 log_orientation     = false
 log_chat            = false
 log_infomsg         = false
@@ -72,3 +73,4 @@ log_description     = false
 log_friends         = false
 log_minimap         = false
 log_lfg             = false
+log_npcs            = false
