--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -24,12 +24,12 @@ SET(target_CPP
     MapInstance.cpp
     MapLink.cpp
     MapManager.cpp
+    MapSceneGraph.cpp
     MapServer.cpp
     MapServerData.cpp
     MapTemplate.cpp
     NetCommandManager.cpp
     SlashCommand.cpp
-    SceneGraph.cpp
     WorldSimulation.cpp
     ${SCRIPTING_CPP}
 )
@@ -70,13 +70,13 @@ SET(target_INCLUDE
     MapLink.h
     MapManager.h
     MapRef.h
+    MapSceneGraph.h
     MapServer.h
     MapServerData.h
     MapTemplate.h
     NetCommandManager.h
     ScriptingEngine.h
     SlashCommand.h
-    SceneGraph.h
     WorldSimulation.h
 )
 
@@ -89,7 +89,7 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 ADD_LIBRARY(mapserver_lib STATIC ${target_SOURCES})
-target_link_libraries(mapserver_lib PUBLIC CRUDP_Protocol)
+target_link_libraries(mapserver_lib PUBLIC CRUDP_Protocol common_runtime)
 qt5_use_modules(mapserver_lib LINK_PUBLIC Core)
 if(ENABLE_SCRIPTING_ENGINE)
     target_compile_definitions(mapserver_lib PUBLIC -DSCRIPTING_ENABLED=1)
