A bunch of new goodies:
* Generator based NPCs can be spawned now ( this includes cars/drones/doors etc )
* New and stuck characters are put at the NewPlayer spawn location, based on the current map's scene graph

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(target_CPP
     Events/InfoMessageCmd.cpp
     Events/WindowState.cpp
     NpcStore.cpp
+    NpcGenerator.cpp
     MapEventFactory.cpp
     MapInstance.cpp
     MapLink.cpp
@@ -64,6 +65,7 @@ SET(target_INCLUDE
     Events/InteractWithEntity.h
     Events/WindowState.h
     NpcStore.h
+    NpcGenerator.h
     MapEventFactory.h
     MapEvents.h
     MapInstance.h
