SEGSAdmin config and logging functionality
* Adds ability to edit and save server and logging settings
* Adds more existing settings.cfg and databases checks
* Initial user friendly 'server setup' functionality
* User can provide an IP and a default config file is created

** Review and other changes **

* Add some input help text on AddNewUserDialog to explain minimum of 3 chars for username and password
* Changed arguments and local variables to remove m_ prefix
* SEGSAdmin/CMakeLists.txt - Qt version changed from 5.9 > 5.8
* Arguments changed to pass by value (QString ...) instead of (const QString ...)
* No more layoutWidget in .ui files
* Fixed indent issue on a couple of files
* nullptr change

--- a/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
+++ b/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Qt5 5.9 COMPONENTS Core Gui Widgets OpenGL Network REQUIRED)
+find_package(Qt5 5.8 COMPONENTS Core Gui Widgets OpenGL Network REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTORCC ON)
@@ -13,6 +13,9 @@ set(SEGSADMIN_SOURCES
     AddNewUserDialog.ui
     AddNewUserDialog.cpp
     AddNewUserDialog.h
+    GenerateConfigFileDialog.cpp
+    GenerateConfigFileDialog.h
+    GenerateConfigFileDialog.ui
     resources.qrc
 
 )
