SEGSAdmin Piggtool Update
- Add further checks for data/<sub-dirs and maps directories
- Add easy setup for end user to copy pigg files from CoX directory and extract them
- Add tidy up function to remove pigg files once extracted
- Updated application logo

* Review Changes*

- Add piggtool output
- Maps directory now pulled from settings.cfg, if changed during
application open will re-check if directory exists
- If pigg_dispatcher recieves no finished signal from worker, instead of
instant timeout will ask user if they want to wait or quit
- Check if CoX client is correct version (using SHA-1 hash comparison)
- Code tidy up
- QStringList g_map_names global variable
- Code tidy up

--- a/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
+++ b/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
@@ -17,8 +17,13 @@ set(SEGSADMIN_SOURCES
     GenerateConfigFileDialog.h
     GenerateConfigFileDialog.ui
     resources.qrc
+    SetUpData.ui
+    SetUpData.cpp
+    SetUpData.h
+    Globals.cpp
+    Globals.h
 
 )
 
-add_executable(SEGSAdmin WIN32 ${SEGSADMIN_SOURCES})
+add_executable(SEGSAdmin ${SEGSADMIN_SOURCES})
 qt5_use_modules(SEGSAdmin Core Gui Widgets Network)
